# readhgt

./: CMakeLists.txt  README.md  main.cpp  readhgt.cpp  readhgt.h
files/: N42E104.hgt  bin.hgt
